gcc/testsuite/rust/rustc/ui/parser/missing-fn-issue-65381-1_dg.rs
main() {
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

